gradle: bump mockito-junit-jupiter version to latest